--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Sección de Presentación -->
     <section class="presentacion">
-        <img class="" src="assets/profile.png" alt="Foto de perfil">
+        <img class="presentacion__foto" src="assets/profile.png" alt="Foto de perfil">
         <div class="presentacion__contenedor">
             <h2 class="presentacion__titulo">Hola, mi nombre es Crhistian y construyo páginas web</h2>
             <p class="presentacion__subtitulo">Soy formada en... lorem ipsum sit amet consectetur y actualmente estoy
@@ -122,17 +122,17 @@
         <h2 class="formacion__titulo">Formación académica</h2>
         <ul class="formacion__lista">
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/ufpr_logo.png" alt="UFPR">
+                <img class="formacion__icono" src="assets/logo-unmsm.png" alt="UFPR">
                 <div>
-                    <h3 class="formacion__nombre">Análisis de datos</h3>
-                    <p class="formacion__detalle">2018 - UFPR</p>
+                    <h3 class="formacion__nombre">Ingeniería de Software</h3>
+                    <p class="formacion__detalle">2024 - UNMSM</p>
                 </div>
             </li>
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/alura_logo.png" alt="Alura">
+                <img class="formacion__icono" src="assets/logo-alura.png" alt="Alura">
                 <div>
-                    <h3 class="formacion__nombre">Formación en UX Design</h3>
-                    <p class="formacion__detalle">2019 - Alura</p>
+                    <h3 class="formacion__nombre">Especialización FrontEnd</h3>
+                    <p class="formacion__detalle">2025 - Alura</p>
                 </div>
             </li>
             <li class="formacion__elemento">
@@ -166,8 +166,9 @@
         <form class="contacto__formulario">
             <input class="contacto__campo" type="text" placeholder="Nombre">
             <input class="contacto__campo" type="email" placeholder="Correo Electrónico">
+            <input class="contacto__campo" type="text" placeholder="Asunto">
             <textarea class="contacto__campo contacto__campo--textarea" placeholder="Mensaje"></textarea>
-            <button class="contacto__boton" type="submit">Enviar</button>
+            <button class="contacto__boton" type="submit">Enviar mensaje</button>
         </form>
     </section>
 </body>
